# LightTransport

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
doc/: 01-architecture.md  02-public-api.md  03-rendering-pipeline.md  04-scene-and-assets.md  05-materials-and-styles.md  06-cli-and-editor.md  07-development-recipes.md  08-build-and-verification.md  09-logging.md  10-irradiance-volume.md  11-lightmap.md  12-viewport-view.md  13-svgf.md  13.5-cwbvh.md  14-wavefront-path-tracing-optimization.md  15-wavefront-restir-di.md  16-wavefront-restir-gi.md  17-wavefront-restir-pt.md  README.md
include/lt/: denoiser.h  image_io.h  log.h  material.h  materialx_adapter.h  math.h  renderer.h  scene.h  texture.h
scenes/: cornell.lt  restir_environment_test.lt  restir_hdri_test.lt  soft_shadow_test.lt  standard_surface_test.lt  textured_quad.lt  toon_material_test.lt
src/: cpu_path_tracer.cpp  cuda_path_tracer.cu  editor_win32.cpp  fbx_loader.cpp  gltf_loader.cpp  image_io.cpp  log.cpp  main.cpp  material.cpp  materialx_adapter.cpp  scene.cpp  texture.cpp
src/cli/: render_options.cpp  render_options.h
src/cpu/: camera.inl  cuda_stub.cpp  intersection.inl  irradiance_volume.inl  irradiance_volume_bake.inl  lightmap.inl  lightmap_bake.inl  path_tracer.cpp  renderer.inl  shading.inl  types.inl
src/denoise/: svgf.cpp
src/editor/: editor_platform.cpp  editor_platform.h  editor_state.cpp  editor_state.h  solid_preview.cpp  solid_preview.h
src/gpu/: cuda_path_tracer.cu  intersection.cuh  irradiance_volume_bake.cuh  kernel.cuh  lightmap_bake.cuh  math.cuh  restir_di.cuh  restir_gi.cuh  restir_pt.cuh  scene_upload.cuh  shading.cuh  types.cuh
src/pbrt/: pbrt_loader.cpp
src/scene/: render_scene.cpp  scene_geometry.cpp  scene_internal.h  scene_io.cpp
